--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,22 @@ x-airflow-base:
   build:
     context: .
   image: custom-airflow:latest
+
+x-airflow-common:
+  &airflow-common
+  image: apache/airflow:2.9.1
+  environment:
+    - AIRFLOW__CORE__EXECUTOR=LocalExecutor
+    - AIRFLOW__CORE__FERNET_KEY=your_fernet_key
+    - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=false
+    - AIRFLOW__CORE__LOAD_DEFAULT_CONNECTIONS=false
+    - AIRFLOW__CORE__LOAD_EXAMPLES=false
+    - SETLISTFM_API_KEY=uIfQdN5pj3x-tVhY8I617-lLPz9XmX9pW3tT
+  volumes:
+    - ./dags:/opt/airflow/dags
+    - ./logs:/opt/airflow/logs
+    - ./plugins:/opt/airflow/plugins
+
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.4.1
@@ -88,6 +104,7 @@ services:
       timeout: 5s
       retries: 5
   airflow-init:
+    <<: *airflow-common
     image: apache/airflow:2.9.1
     depends_on:
       postgres:
@@ -110,6 +127,7 @@ services:
     build:
       context: .
   airflow-webserver:
+    <<: *airflow-common
     build:
       context: .
     image: apache/airflow:2.9.1
@@ -148,6 +166,7 @@ services:
       timeout: 10s
       retries: 5
   airflow-scheduler:
+    <<: *airflow-common
     build:
       context: .
     image: apache/airflow:2.9.1
@@ -177,6 +196,7 @@ services:
       retries: 5
       start_period: 30s
   airflow-worker:
+    <<: *airflow-common
     build:
       context: .
     image: apache/airflow:2.9.1
@@ -198,6 +218,7 @@ services:
     - ./plugins:/opt/airflow/plugins
     - ./models:/opt/airflow/models
   airflow-triggerer:
+    <<: *airflow-common
     build:
       context: .
     image: apache/airflow:2.9.1
