--- a/.github/workflows/dbt-cd.yml
+++ b/.github/workflows/dbt-cd.yml
@@ -13,10 +13,10 @@ jobs:
         with:
           python-version: '3.9'
       
-      - name: Install dbt
+      - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-          dbt deps
       
       - name: Deploy dbt models
         run: dbt build --target prod
