--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -13,18 +13,14 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install dbt
+      - name: Install dependencies
         run: |
-          pip install sqlfluff dbt-core dbt-snowflake
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
           dbt deps
       
       - name: Check code quality
         run: sqlfluff lint .
-
-      - name: Install dbt
-        run: |
-          pip install -r requirements.txt
-          dbt deps
       
       - name: Run dbt tests
         run: dbt build --target ci
